--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.15)
 
 project(viage VERSION 1.0.7 LANGUAGES CXX)
 
+set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_REQUIRED 20)
 
 set(CLIENT ON CACHE BOOL "building client")
 set(SERVER ON CACHE BOOL "building server")
