--- a/.github/workflows/osx.yaml
+++ b/.github/workflows/osx.yaml
@@ -2,26 +2,23 @@ name: Macos
 
 on:
   push
-#  push:
-#    tags:
-#      - '*'
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
   MIN_OSX_VERSION: 11.0
 
 jobs:
   build_release:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
+
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest
 
     - run: brew install ninja qt
     - run: mkdir build
@@ -31,6 +28,8 @@ jobs:
       run: >
         cmake .. -GNinja
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        -DCMAKE_CXX_COMPILER=clang++
+        -DCMAKE_C_COMPILER=clang
         -DSERVER=OFF
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${{env.MIN_OSX_VERSION}}
         -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64"
@@ -42,9 +41,3 @@ jobs:
       with:
         name: viage
         path: ${{github.workspace}}/build/bin/viage.dmg
-
-    #- name: Test
-      # working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      # run: ctest -C ${{env.BUILD_TYPE}}
