--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,7 +26,7 @@ jobs:
        target: 'desktop'
        arch: 'win64_mingw'
        modules: 'qtmultimedia'
-       tools: 'tools_ifw'
+       tools: 'tools_ifw tools_mingw90,qt.tools.win64_mingw900'
        dir: ${{github.workspace}}
 
     - run: mkdir build
@@ -35,9 +35,11 @@ jobs:
       working-directory: ./build
       run: >
         cmake .. -GNinja
+        -DCMAKE_CXX_COMPILER=D:/a/viage/viage/Qt/Tools/mingw1120_64/bin/g++.exe
+        -DCMAKE_C_COMPILER=D:/a/viage/viage/Qt/Tools/mingw1120_64/bin/gcc.exe
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        -DSERVER=OFF    
-        -DCPACK_IFW_ROOT="${{github.workspace}}/Qt/Tools/QtInstallerFramework/${{env.IFW_VERSION}}"
+        -DSERVER=OFF
+        -DCPACK_IFW_ROOT=${{github.workspace}}/Qt/Tools/QtInstallerFramework/${{env.IFW_VERSION}}
 
     - name: Build
       run: cmake --build build --target package
