[OpenUrl] necessary syntax for mac adapted from https://stackoverflow.com/q/48243245/14999126

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,6 +35,7 @@ jobs:
       working-directory: ./build
       run: >
         cmake .. -GNinja
+# github.workspace can't be parsed for compiler path for some reason
         -DCMAKE_CXX_COMPILER=D:/a/viage/viage/Qt/Tools/mingw1120_64/bin/g++.exe
         -DCMAKE_C_COMPILER=D:/a/viage/viage/Qt/Tools/mingw1120_64/bin/gcc.exe
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
