--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -1,4 +1,5 @@
 name: Macos
+
 on:
   push
 
@@ -20,6 +21,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
 
       - run: HOMEBREW_NO_AUTO_UPDATE=1 brew install ninja qt
       - run: mkdir build
