--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -40,9 +40,9 @@ jobs:
           -DCMAKE_OSX_DEPLOYMENT_TARGET=${{env.MIN_OSX_VERSION}}
 
       - name: Build
-        run: cmake --build build --target viage
+        run: cmake --build build --target all
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: viage_${{matrix.chip}}
           path: ${{github.workspace}}/build/bin/viage.dmg
