--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,15 @@ project(mutual CXX)
 
 add_library(${PROJECT_NAME} STATIC)
 
+if(NOT SERVER)
+    set(JSONCPP_WITH_TESTS OFF CACHE BOOL "do not buid jsoncpp_tests" FORCE)
+    set(BUILD_SHARED_LIBS OFF CACHE BOOL "do not buid jsoncpp_lib as shared" FORCE)
+    set(BUILD_OBJECT_LIBS OFF CACHE BOOL "do not buid jsoncpp_lib as object" FORCE)
+    # Not sure why it has to be included before and not here
+    # include_directories("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/jsoncpp/include")
+    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/jsoncpp")
+endif()
+
 target_sources(${PROJECT_NAME}
     PRIVATE
     include/base_data.hpp
@@ -22,7 +31,11 @@ target_sources(${PROJECT_NAME}
     src/Item/team_item.cpp
 )
 
-add_library(mutual::mutual ALIAS mutual)
+add_library(mutual::mutual ALIAS ${PROJECT_NAME})
+
+if(NOT SERVER)
+    target_link_libraries(${PROJECT_NAME} PRIVATE jsoncpp_static)
+endif()
 
 target_include_directories(${PROJECT_NAME}
     PRIVATE
@@ -30,3 +43,4 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC
         $<BUILD_INTERFACE:${LIB_INCLUDES}>
 )
+
